...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_musician_picture" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/musicianDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/musician_description"
                android:paddingLeft="50dp"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragments_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/album_item" />
            </FrameLayout>


...
