<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vinyls_jetpack_application.ui.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/albumFragment"
            android:title="@string/albums"
            android:icon="@drawable/ic_baseline_album_24"
            app:showAsAction="never" />

        <item
            android:id="@+id/musicianFragment"
            android:title="@string/artistas"
            android:icon="@drawable/ic_baseline_music_note_24"
            app:showAsAction="never" />

        <item
            android:id="@+id/collectorFragment"
            android:title="@string/collectors"
            android:icon="@drawable/ic_baseline_people_outline_24"
            app:showAsAction="never" />
    </group>
</menu>