...
            app:defaultNavHost="true"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
            app:navGraph="@navigation/nav_graph"
            tools:layout_editor_absoluteX="0dp" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/purple_500"
            android:textSize="16sp"
...
