<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.fragments.AlbumCreateFragment"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/albumCreateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/album_create_title"
                android:autofillHints="@string/album_create_title"
                android:inputType="textPersonName"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/albumCreateCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/album_create_cover"
                android:autofillHints="@string/album_create_cover"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/albumCreateTitle"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/albumCreateDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/album_create_date"
                android:autofillHints="@string/album_create_date"
                android:inputType="date"
                app:layout_constraintTop_toBottomOf="@+id/albumCreateCover"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/albumCreateDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/album_create_description"
                android:autofillHints="@string/album_create_description"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/albumCreateDate"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/albumCreateGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/album_create_genre"
                android:autofillHints="@string/album_create_genre"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/albumCreateDescription"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/albumCreateRecordCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/album_create_record_company"
                android:autofillHints="@string/album_create_record_company"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/albumCreateGenre"
                tools:layout_editor_absoluteX="16dp" />

            <Button
                android:id="@+id/albumCreateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_gradient"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing=".15"
                android:padding="7dp"
                android:text="@string/button_create_album"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/albumCreateRecordCompany"
                tools:layout_editor_absoluteX="98dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>