<resources>
<string name="app_name">Vinilos App</string>

<!-- Strings used for fragments for navigation -->
<string name="txt_no_comments">There is no comments for this album</string>
<string name="title_albums">Albums</string>
<string name="title_collectors">Collectors</string>
<string name="title_comments">Album comment</string>
<string name="title_album">Álbumes</string>
<string name="add_song">Add Tracks</string>
<string name="button_add_album">New Album</string>
<string name="title_detail_musician">Artist detail</string>
<string name="title_collector">Collectors</string>
<string name="description">DESCRIPTION</string>
<string name="button_start">Start</string>
<string name="canciones">Tracks</string>
<string name="artistas">ARTISTS</string>
<string name="albums">ALBUMS</string>
<string name="collectors">COLLECTORS</string>
<string name="title_detail_album">Album detail</string>
<string name="title_musicians">Artist</string>
<string name="logo_vinilos">Logo Vinilos</string>
<string name="vinilos_name">VINILOS</string>
<string name="logo_album">Logo album</string>
<string name="album_name">Name</string>
<string name="album_description">description</string>
<string name="cover_album">Album Cover</string>
<string name="collector_name">aAme</string>
<string name="collector_border">Collector Border</string>
<string name="collector_email">email</string>
<string name="musician_name">Name</string>
<string name="musician_description">Description</string>
<string name="musician_image">Music Image</string>
<string name="musician_item_image">Music cover</string>
<string name="musician_item_name">Artist name</string>
<string name="track_item_image">Image song</string>
<string name="collector_detail_email">Collector email</string>
<string name="collector_image">Collector image</string>
<string name="title_detail_collector">Collector info</string>
<string name="collector_telephone">Collector phone</string>
<string name="title_album_create">New Album</string>
<string name="button_create_album">Create Album</string>
<string name="album_create_title">Title</string>
<string name="album_create_cover">Cover</string>
<string name="album_create_date">Launch date</string>
<string name="album_create_description">Description</string>
<string name="album_create_genre">Genre</string>
<string name="album_create_record_company">Record company</string>
<string name="associate_track_name">Name</string>
<string name="associate_track_duration">Duration</string>
<string name="button_associate_track">Add</string>
<string name="title_associate_track">Asociate track</string>
</resources>