<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="comment"
            type="com.uniandes.vinilosapplication.data.model.CommentModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="3dp"
                android:paddingEnd="8dp"
                android:paddingBottom="3dp"
                android:text="@{comment.rating}" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="3dp"
                android:paddingEnd="8dp"
                android:paddingBottom="3dp"
                android:text="@{comment.description}" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>

